--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <h2 class = "user-pattern" >Catch up the pattern !</h2>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="game.js" type="text/javascript">
+  <script src="index.js" type="text/javascript">
   </script>
 </body>
 
